fix z-index in autocomplete

--- a/src/client/object/AppendForm.less
+++ b/src/client/object/AppendForm.less
@@ -225,6 +225,10 @@
   .CreateObject__row {
     margin-top: -5px;
   }
+
+  &__drop-down.ant-select-dropdown.ant-select-dropdown--single.ant-select-dropdown-placement-bottomLeft {
+    z-index: 1300;
+  }
 }
 
 div[data-dir='rtl'] .Editor {
