--- a/src/client/objects/Objects.less
+++ b/src/client/objects/Objects.less
@@ -18,6 +18,10 @@
     }
   }
 
+  &__drop-down.ant-select-dropdown.ant-select-dropdown--single.ant-select-dropdown-placement-bottomLeft {
+    z-index: 1020 !important;
+  }
+
   &__message {
     width: 25%;
     font-weight: bold;
